<resources>
    <string name="app_name">StreetReport</string>
    <string name="mapa">map</string>
    <string name="notas">notes</string>
    <string name="reports">reports</string>
    <string name="newNote">new note</string>
    <string name="edit">edit</string>
    <string name="remove">remove</string>
    <string name="title">Name:</string>
    <string name="hintName">Insert note name</string>
    <string name="desc">Description:</string>
    <string name="hintDesc">Insert description</string>
    <string name="confirmBtn">Confirm</string>
    <string name="inserted">Note created</string>
    <string name="notinserted">Nothing was done</string>
    <string name="emptyField">Field can\'t be empty</string>
    <string name="noteUpdated">Note Updated</string>
    <string name="noteDeleted">Note Deleted</string>
    <string name="title_activity_report_mapa">Map</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="hintUsername">Insert Your Username</string>
    <string name="hintPassword">Insert Your Password</string>
    <string name="login">Login</string>
    <string name="sharedPref" translatable="false">preferences</string>
    <string name="userlogged" translatable="false">userlogged</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="obras">Construction</string>
    <string name="acidente">Accident</string>
    <string name="terreno">Terrain</string>

    <string-array name="tipos">
        <item>@string/obras</item>
        <item>@string/acidente</item>
        <item>@string/terreno</item>
        <item>@string/outro</item>
    </string-array>
    <string name="outro">Other</string>
    <string name="tipo">Type:</string>
    <string name="image">Image:</string>
    <string name="reportadd">Report Created</string>
    <string name="filters">Filters</string>
    <string name="delete">Delete</string>
    <string name="reportedby">Reported by:</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="selectImage">You must select a image</string>
    <string name="noReports">No Reports Where Found</string>
    <string name="fivehundredmeters">500 meters</string>
    <string name="fivekilometers">5 kilometers</string>
    <string name="tenkilometers">10 kilometers</string>
</resources>
