<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportInfo">

    <TextView
        android:id="@+id/descTextReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inputDescReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/descTextReport"
        app:layout_constraintTop_toTopOf="@+id/descTextReport" />


    <EditText
        android:id="@+id/inputDescReportEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="28dp"
        android:hint="@string/hintDesc"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/descTextReport"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tipo"
        app:layout_constraintStart_toStartOf="@+id/descTextReport"
        app:layout_constraintTop_toBottomOf="@+id/descTextReport" />

    <TextView
        android:id="@+id/textTipoInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text=""
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toEndOf="@+id/textTipo"
        app:layout_constraintTop_toBottomOf="@+id/descTextReport" />

    <TextView
        android:id="@+id/imageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/image"
        app:layout_constraintStart_toStartOf="@+id/textTipo"
        app:layout_constraintTop_toBottomOf="@+id/textTipo" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="91dp"
        android:layout_height="37dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:text="Upload"
        app:layout_constraintStart_toEndOf="@+id/imageText"
        app:layout_constraintTop_toTopOf="@+id/imageText"/>




    <ImageView
        android:id="@+id/imagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpload"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/editReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/saveReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/confirmBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/cancel_buttonReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/reportedby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/reportedby"
        app:layout_constraintBottom_toTopOf="@+id/editReport"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/reportedbyuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/reportedby"
        app:layout_constraintTop_toTopOf="@+id/reportedby" />


</androidx.constraintlayout.widget.ConstraintLayout>